# phage_contig_annotator

./: .gitattributes  .gitignore  README.md  __init__.py  cli.py  databases  environment.yml  install.sh  pyproject.toml  utils.py
databases/blastdb/: phrogs.phd  phrogs.phi  phrogs.phr  phrogs.pin  phrogs.pog  phrogs.psd  phrogs.psi  phrogs.psq
databases/hmmerdb/hmm_db_with_annot/: phrogs.hmm  phrogs.hmm.h3f  phrogs.hmm.h3i  phrogs.hmm.h3m  phrogs.hmm.h3p
databases/meta/: PHROG index.csv  phrog_annot_v3.tsv  phrogs_table_almostfinal_plusGO_wNA_utf8.tsv
docs/examples/: NODE_94_report.html  NODE_94_report_dark.html
src/: cli.py  config.ini  utils.py
src/pca/: __init__.py  annotations.py  cli.py  databases.py  externals.py  genome_stats.py  io.py  logutils.py  multicopy.py  parallel.py  parsers.py  pipeline.py  utils.py  validation.py
src/pca/data/: config.ini
src/pca/workflow/: Snakefile
src/phage_contig_annotator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_annotations.py  test_cli.py  test_externals.py  test_extra_dbs.py  test_genome_stats.py  test_io.py  test_multicopy.py  test_parsers.py  test_utils.py
