[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "phage_contig_annotator"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pca.data" = ["*.ini"]

[project.scripts]
phage_contig_annotator = "pca:cli.main"

